tests/snapshots/test_runner__tests__compiler__typecheck__shorthand_record_access_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let match = <A, B>(a: A, f: (a: A) => B): B => a.f()

do { a: 2 }.match(.b).print()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/shorthand_record_access_1.kk:3:20
  │
3 │ do { a: 2 }.match(.b).print()
  │                    ^ No such property
  │
  = Available properties:
      a
